--- a/react/12- side-effects.html
+++ b/react/12- side-effects.html
@@ -33,7 +33,7 @@
         const handlechanges = (event) => {
           setName(event.target.value)
         
-          //window.localStorage.setItem('username', name)
+          window.localStorage.setItem('username', name)
         }
 
         return <>
